--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,8 @@ footer {
   background-color: #333;
   color: white;
   padding: 10px 
+
+.responsive-img {
+    max-width: 100%;
+    height: auto; 
+}
