--- a/styles.css
+++ b/styles.css
@@ -112,14 +112,14 @@ footer {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 4 columns */
     gap: 10px; /* Space between icons */
-    max-width: 400px; /* Adjust width to fit content */
+    max-width: 800px; /* Adjust width to fit content */
     margin: 0 auto; /* Centering */
     justify-items: center; /* Center icons */
 }
 
 .amenities-container img {
-    width: 30px !important;
-    height: 30px !important;
+    width: 30px;
+    height: 30px;
 }
 
 
