--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,17 @@ header nav ul li a {
   text-align: center;
   font-family: 'Playfair Display', serif; 
   padding: 170px 0; /* Adjust padding as necessary to make space for the text */
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/pexels-simone-coltri-14865557-6317420.jpg');
+}
 
+.hero::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+  z-index: -1; /* Ensures that the overlay is behind the text */
 }
 
 
