--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ header nav ul li a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+  background-color: rgba(255, 255, 255, 0.75); 
   z-index: -1; /* Ensures that the overlay is behind the text */
 }
 
