--- a/styles.css
+++ b/styles.css
@@ -30,26 +30,18 @@ header nav ul li a {
 
 
 .hero {
-  background-image: url('images/pexels-simone-coltri-14865557-6317420.jpg'); 
-  background-size: cover; /* Ensure it covers the entire viewport */
-  background-position: center; /* Center the image */
-  background-attachment: fixed; /* Optional: makes the image stay fixed when scrolling */
-  color: white; /* Ensure text remains visible */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+              url('images/pexels-simone-coltri-14865557-6317420.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: #FFFFFF;
   text-align: center;
-  font-family: 'Playfair Display', serif; 
-  padding: 170px 0; /* Adjust padding as necessary to make space for the text */
+  min-height: 700px;
+  padding: 200px 0;
+  font-family: 'Playfair Display', serif;
 }
 
-.hero::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.75); 
-  z-index: -1; /* Ensures that the overlay is behind the text */
-}
 
 
 .placeholder {
