--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header nav ul li a {
 
 
 .hero {
-  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), 
+  background: linear-gradient(rgba(255, 255, 255, 0.86), rgba(255, 255, 255, 0.86)), 
               url('images/pexels-simone-coltri-14865557-6317420.jpg');
   background-size: cover;
   background-position: center;
@@ -38,10 +38,10 @@ header nav ul li a {
   color: #FFFFFF;
   text-align: center;
   min-height: 700px;
-  padding: 180px 0;
+  padding: 160px 0;
   font-family: 'Playfair Display', serif;
 }
-
+g
 
 .placeholder {
     background-color: #2C3E50;
