--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,10 @@ header nav ul li a {
   background-attachment: fixed;
   color: #FFFFFF;
   text-align: center;
-  min-height: 500px;
-  padding: 180px 0;
+  min-height: 400px;
+  padding: 160px 0;
   font-family: 'Playfair Display', serif;
+  font-size: 36px;
 }
 
 
