--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ header nav ul li a {
   color: #FFFFFF;
   text-align: center;
   min-height: 300px;
-  padding: 0px 0;
+  padding: 150px 0;
   font-family: 'Playfair Display', serif;
 }
 
@@ -123,6 +123,7 @@ footer {
     color: white;
     text-align: center;
     padding: 0px 0;
+    margin: 0 auto;
     position: relative; /* Make the parent container a positioning context */
 }
 
