--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@ body {
 }
 
 header {
-  background-color: #d8d8d8; 
+  background-color: rgba(216, 216, 216, 0.5); 
   color: #8c1313; 
   padding: 6px 15px; /* Padding around the content */
   position: fixed; /* Make the navigation bar fixed at the top */
   top: 20px; /* Stick it to the top of the page */
-  left: 350px; /* Stick it to the left */
-  right: 350px; /* Ensure it spans the whole width */
+  left: 400px; /* Stick it to the left */
+  right: 400px; /* Ensure it spans the whole width */
   z-index: 1000; /* Make sure it's on top of other elements */
   border-radius: 25px; /* Rounded corners */
   margin: 0 auto; /* Center it within the page */
@@ -46,9 +46,8 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  background-color: #444; /* Darker background color on hover */
+  color: white
 }
-
 
 .hero {
   background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), 
