--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  background-color: rgba(216, 216, 216, 0.5); 
+  background-color: rgba(216, 216, 216, 0.7); 
   color: #8c1313; 
   padding: 6px 15px; /* Padding around the content */
   position: fixed; /* Make the navigation bar fixed at the top */
@@ -43,6 +43,8 @@ header nav ul li a {
   display: inline-block; /* Make the links inline-block */
   border-radius: 10px; /* Rounded corners for the links */
   transition: background-color 0.3s; /* Smooth background color transition */
+  font-family: 'Helvetica', serif;
+
 }
 
 header nav ul li a:hover {
