--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ header nav ul li a:hover {
 
 
 .placeholder {
-    background-color: #2C3E50;
+    background-color: white;
     color: white;
     padding: 40px 0;
     max-width: 1200px; /* You can adjust this for the section's width */
@@ -92,6 +92,7 @@ header nav ul li a:hover {
 .text-container {
     flex: 1; /* Makes the text container take up equal space */
     padding: 0 20px; /* Optional padding between text and image */
+    text-align: center;
 }
 
 .responsive-img {
