--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ header nav ul li a:hover {
     flex: 1; /* Makes the text container take up equal space */
     padding: 0 20px; /* Optional padding between text and image */
     text-align: center;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
 }
 
 .responsive-img {
@@ -108,7 +109,7 @@ header nav ul li a:hover {
   margin-bottom: 3px;  /* Adjust space below the h1 */
 }
 
-.hero b {
+.hero p {
   font-size: 28px;  
   margin-top: 0;  
   margin-bottom: 10px;  
